@startuml

class Usuari {
  id : bigint <<PK>>
  nom : string
  email : string
  password : string
  rol : string 
}


class Post {
  id : bigint <<PK>>
  titol : string
  descripcio : text
  contingut : text
  historia : text
  tecnica : text
  epoca : string
  imatge : string
  usuari_id : bigint <<FK>>
  tipus_eina_id : bigint <<FK>>
}

class Comentari {
  id : bigint <<PK>>
  contingut : text
  usuari_id : bigint <<FK>>
  post_id : bigint <<FK>>
}

class Valoracio {
  id : bigint <<PK>>
  puntuacio : int
  usuari_id : bigint <<FK>>
  post_id : bigint <<FK>>
}

class TipusEina {
  id : bigint <<PK>>
  nom : string
}


Usuari "1" -- "0..*" Post : crea
Usuari "1" -- "0..*" Comentari : escriu
Usuari "1" -- "0..*" Valoracio : fa

Post "1" -- "0..*" Comentari : te
Post "1" -- "0..*" Valoracio : rep


TipusEina "1" -- "0..*" Post : classifica

@enduml